Se cambia metodo para convertir a lista